@@ -278,6 +278,7 @@ protected:
 
   void resizeEvent(QResizeEvent *e);
   void keyPressEvent(QKeyEvent *e);
+  void keyReleaseEvent(QKeyEvent *e);
   void mousePressEvent(QMouseEvent *e);
   void mouseReleaseEvent(QMouseEvent *e);
   void mouseMoveEvent(QMouseEvent *e);
@@ -607,6 +608,7 @@ protected slots:
 protected:
   void resizeEvent(QResizeEvent *e);
   void keyPressEvent(QKeyEvent *e);
+  void keyReleaseEvent(QKeyEvent *e);
   virtual void dragEnterEvent(QDragEnterEvent *e);
   virtual void dragMoveEvent(QDragMoveEvent *e);
   virtual void dragLeaveEvent(QDragLeaveEvent *e);
